nginx-ingress-controller-manifests/etc/nginx-ns.yaml
---
#Create a namespace for nginx ingress controleer

apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
