nginx-ingress-controller-manifests/etc/nginx-controller-full_old.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx

---

apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-service-ip
  namespace: ingress-nginx
spec:
  type: ClusterIP
  selector:
    name: ingress-nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      
---

apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-service-nlb
  namespace: ingress-nginx
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: '60'
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    name: ingress-nginx
     
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      name: ingress-nginx
  template:
    metadata:
      labels:
        name: ingress-nginx
    spec:
      dnsPolicy: ClusterFirst
      serviceAccountName: ingress-nginx-sa
      containers:
        - name: nginx-ingress-controller
          image: rancher/nginx-ingress-controller:nginx-1.7.0-rancher1
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/ingress-nginx-config
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
              
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 10          
            periodSeconds: 5
            failureThreshold: 5
          
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
            initialDelaySeconds: 10          
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-kandula
  namespace: kandula
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-cert: "arn:aws:acm:us-east-1:735911875499:certificate/d416be11-bd15-404e-8bf5-a73a8b8e6e10"
spec:
  rules:
    - host: kandula.dianatop.lat
      http:
        paths:
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: kandula-service
                port:
                  number: 5000
