nginx-ingress-controller-manifests/etc/nginx-kandula-ingress.yaml
---
#Creates an ingress for nginx ingress controller

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kandula
  namespace: kandula
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-cert: "arn:aws:acm:us-east-1:735911875499:certificate/d416be11-bd15-404e-8bf5-a73a8b8e6e10"
#spec:
#  backend:
#    serviceName: 
#    servicePort: 
spec:
  rules:
    - host: kandula.dianatop.lat
      http:
        paths:
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: ingress-nginx-controller
                port:
                  number: 5000
